resposive news bar bug fixed and from page items realign

--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -330,7 +330,6 @@ ul#menu li {
 
 ::-webkit-scrollbar-track {
     background: #eceff1;
-  
 }
 
 /* Handle */
@@ -570,7 +569,7 @@ textarea {
     padding: 0.5%;
 }
 
-.icon-back{
+.icon-back {
     position: relative;
     right: 14px;
     bottom: -8px;
@@ -578,7 +577,7 @@ textarea {
     width: 30px;
 }
 
-.titleDetails{
+.titleDetails {
     font-weight: bold;
     margin-left: 12px;
     color: var(--theme-primary-color);
@@ -590,10 +589,56 @@ textarea {
     font-size: 22px;
 }
 
-
-#titlePost{
+#titlePost {
     margin-left: 18px !important;
 }
 
+/* 
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
 
+@media (min-width: 1281px) {}
 
+/* 
+    ##Device = Laptops, Desktops
+    ##Screen = B/w 1025px to 1280px
+  */
+
+@media (min-width: 1025px) and (max-width: 1280px) {}
+
+/* 
+    ##Device = Tablets, Ipads (portrait)
+    ##Screen = B/w 768px to 1024px
+  */
+
+@media (min-width: 768px) and (max-width: 1024px) {}
+
+/* 
+    ##Device = Tablets, Ipads (landscape)
+    ##Screen = B/w 768px to 1024px
+  */
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {}
+
+/* 
+    ##Device = Low Resolution Tablets, Mobiles (Landscape)
+    ##Screen = B/w 481px to 767px
+  */
+
+@media (min-width: 481px) and (max-width: 767px) {
+    .news-panel {
+        display: none;
+    }
+}
+
+/* 
+    ##Device = Most of the Smartphones Mobiles (Portrait)
+    ##Screen = B/w 320px to 479px
+  */
+
+@media (min-width: 320px) and (max-width: 480px) {
+    .news-panel {
+        display: none;
+    }
+}
